2004-07-22	blytkerchan
	* hptr.c: remove all void** casts for compare_and_exchange calls
	* module.mk: update
	* smr.c: include <string.h>, and arch-dependant headers
	cast parameters to atmoic_increment and atomic_decrement calls to
	uint32_t*

2004-07-20	blytkerchan
	* module.mk: new file

2004-05-07	blytkerchan
	* Makefile.am [libmemory_la_SOURCES]: add increment.c and decrement.c
	[TESTS]: new variable
	[noinst_PROGRAMS]: ditto
	[test1_LDADD]: ditto
	[test2_LDADD]: ditto
	[man_MANS]: ditto
	[EXTRA_DITS]: add manpages and sources
	<%.3>: new target
	* NEWS: add contents
	* README: update words on P variable and words on K variable
	add Further Documentation and Author sections
	* libmemory.3.sgml: correct spelling
	* test1.c (main): update use of smr_init
	* test2.c (main): ditto
	[N_THREADS]: lower to 10
	[BATCH_SIZE]: remove

2004-05-04	blytkerchan
	* hptr.c (hptr_get): new function
	* hptr.h (hptr_get): ditto

2004-05-03	blytkerchan	debug session
	* Makefile.am [AM_CFLAGS]: new variable
	* hptr.c (hptr_register_local_data): make it possible to register local data if none is registered yet..
	(hptr_get_local_data): use calloc for allocations
	(hptr_init): ditto
	* smr.c (smr_get_private_data): ditto
	(smr_init): ditto
	(smr_binary_search_worker): compare the pointers, not what they point to
	handle the case that mid == lower (or mid == upper)
	(smr_scan_worker): handle the case that new hazard pointers are allocated and set during phase 1

2004-04-30	blytkerchan	repair compilation
	* configure.ac: find pthread_setspecific function in pthread library

2004-04-29	blytkerchan
	* AUTHORS: new file
	* NEWS: ditto
	* libmemory.sgml: update text throughout
	* smr.h (smr_init): take unsigned integer as parameter
	remove old comments

	* ChangeLog: update date of yesterday's changes (from apr 27 to apr 28)
	fix type-o in feb 25 entry
	* smr.c (smr_get_private_data): use dsize attribute of private data
	(smr_scan_worker): add FIXME note